--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 git+https://github.com/nghorbani/human_body_prior.git@SOMA
-git+https://github.com/nghorbani/body_visualizer
+git+https://github.com/ritaank/body_visualizer.git
 git+https://github.com/nghorbani/configer.git
 imageio
 mkl
