--- a/support_data/conf/eval_label.yaml
+++ b/support_data/conf/eval_label.yaml
@@ -1,7 +1,7 @@
 mocap_gt:
   fname: ??? # should be provided at runtime
   ds_name: ${resolve_mocap_ds_name:${mocap_gt.fname}} # dataset name
-  subject_name: ${resolve_mocap_subject:${mocap_gt.fname}}
+  subject_name: ${resolve_mocap_session:${mocap_gt.fname}}
   basename: ${resolve_mocap_basename:${mocap_gt.fname}}
   unit: mm
   rotate:
